--- a/src/track_generator/CMakeLists.txt
+++ b/src/track_generator/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(arti_gazebo)
+project(track_generator)
 
 find_package(catkin REQUIRED
         COMPONENTS
@@ -9,6 +9,7 @@ find_package(catkin REQUIRED
 
 find_package(Eigen REQUIRED)
 find_package(Boost REQUIRED)
+
 
 include_directories(
     include
@@ -24,6 +25,8 @@ catkin_package(
     LIBRARIES 
     CATKIN_DEPENDS
 )
+catkin_add_env_hooks(arti_env_hook
+  SHELLS sh DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/env-hooks)
 
 install(TARGETS 
        ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
