--- a/src/arti_hardware/package.xml
+++ b/src/arti_hardware/package.xml
@@ -16,7 +16,7 @@
     <build_depend>roscpp</build_depend>
 
     <run_depend>cmake_modules</run_depend>
-    <run_depend>costmap_2d</run_depend>
+    <run_depend>roscpp</run_depend>
     <run_depend>eigen</run_depend>
 
     <export>
