--- a/src/arti_description/model/section_A_assembly/model.config
+++ b/src/arti_description/model/section_A_assembly/model.config
@@ -1,6 +1,6 @@
 <?xml version="1.0" ?>
 <model>
-    <name>simple_car_2</name>
+    <name>section_A_assembly</name>
     <version>1.0</version>
     <sdf version="1.5">model.sdf</sdf>
     <author>
