--- a/src/arti_hardware/package.xml
+++ b/src/arti_hardware/package.xml
@@ -20,6 +20,8 @@
     <build_depend>message_generation</build_depend>
     <build_depend>arti_msgs</build_depend>
     <build_depend>nav_msgs</build_depend>
+    <build_depend>controller_manager</build_depend>
+    <build_depend>hardware_interface</build_depend>
     <!-- <build_depend>libserial</build_depend> -->
 
     <run_depend>cmake_modules</run_depend>
@@ -31,6 +33,8 @@
     <run_depend>message_generation</run_depend>
     <run_depend>arti_msgs</run_depend>
     <run_depend>nav_msgs</run_depend>
+    <run_depend>controller_manager</run_depend>
+    <run_depend>hardware_interface</run_depend>
     <!-- <run_depend>libserial</run_depend> -->
     
 
