added odom tf publisher and changed tf2 of zed launch file into tf1

--- a/src/arti_hardware/CMakeLists.txt
+++ b/src/arti_hardware/CMakeLists.txt
@@ -12,6 +12,8 @@ find_package(catkin REQUIRED
             arti_msgs
             # libserial
             nav_msgs
+            realtime_tools
+            tf
         )
 set(CMAKE_CXX_FLAGS "-std=c++0x ${CMAKE_CXX_FLAGS}")
 
