--- a/src/arti_navigation/config/local_costmap_params_2d.yaml
+++ b/src/arti_navigation/config/local_costmap_params_2d.yaml
@@ -19,7 +19,7 @@ obstacle_layer:
   max_obstacle_height: 0.4
   track_unknown_space: true
  
-  observation_sources: laser_scan_sensor point_cloud_sensorA point_cloud_sensorB
+  observation_sources: point_cloud_sensorA point_cloud_sensorB
 
   laser_scan_sensor: {
     data_type: LaserScan, 
