--- a/src/arti_navigation/config/global_costmap_params.yaml
+++ b/src/arti_navigation/config/global_costmap_params.yaml
@@ -1,9 +1,12 @@
 #global_costmap
 global_frame: map
-robot_base_frame: base_footprint
+robot_base_frame: base_link
 update_frequency: 1
 publish_frequency: 1
 always_send_full_costmap: false
+width: 100.0
+height: 100.0
+resolution: 0.025
 plugins:
    - {name: static_layer, type: "rtabmap_ros::StaticLayer"}
    - {name: obstacle_layer, type: "costmap_2d::ObstacleLayer"}
