--- a/src/arti_navigation/config/local_costmap_params.yaml
+++ b/src/arti_navigation/config/local_costmap_params.yaml
@@ -1,25 +1,14 @@
-local_costmap:
-  global_frame: map
-  robot_base_frame: base_footprint
-  update_frequency: 2.0
-  publish_frequency: 2.0
-  static_map: false
-  rolling_window: true
-  width: 4.0
-  height: 4.0
-  resolution: 0.025
-  origin_x: -2.0
-  origin_y: -2.0
+global_frame: odom
+robot_base_frame: base_link
+update_frequency: 2
+publish_frequency: 1
+rolling_window: true
+width: 5.0
+height: 5.0
+resolution: 0.025
+origin_x: 0
+origin_y: 0
 
-  observation_sources: point_cloud_sensor
-
-  # assuming receiving a cloud from rtabmap_ros/obstacles_detection node
-  point_cloud_sensor: {
-    sensor_frame: base_footprint,
-    data_type: PointCloud2, 
-    topic: openni_points, 
-    expected_update_rate: 0.5, 
-    marking: true, 
-    clearing: true,
-    min_obstacle_height: -99999.0,
-    max_obstacle_height: 99999.0}
+plugins:
+  - {name: obstacle_layer,   type: "costmap_2d::ObstacleLayer"}
+  - {name: inflation_layer,  type: "costmap_2d::InflationLayer"}
