--- a/src/arti_navigation/package.xml
+++ b/src/arti_navigation/package.xml
@@ -15,10 +15,12 @@
     <!-- <build_depend>eigen</build_depend> -->
     <build_depend>roscpp</build_depend>
     <build_depend>arti_msgs</build_depend>
+    <build_depend>geometry_msgs</build_depend>
 
     <run_depend>cmake_modules</run_depend>
     <run_depend>roscpp</run_depend>
     <run_depend>arti_msgs</run_depend>
+    <run_depend>geometry_msgs</run_depend>
     <!-- <run_depend>eigen</run_depend> -->
 
     <export>
