--- a/src/arti_navigation/config/costmap_common_params_2d.yaml
+++ b/src/arti_navigation/config/costmap_common_params_2d.yaml
@@ -1,14 +1,17 @@
-footprint: [[ 0.3,  0.3], [-0.3,  0.3], [-0.3, -0.3], [ 0.3, -0.3]]
-footprint_padding: 0.04
+footprint: [[ 0.42,  0.25], [-0.42,  0.25], [-0.42, -0.25], [ 0.42, -0.25]]
+footprint_padding: 0.05
 inflation_layer:
-  inflation_radius: 0.7 # 2xfootprint, it helps to keep the global planned path farther from obstacles
+  inflation_radius: 0.4 # 2xfootprint, it helps to keep the global planned path farther from obstacles
 transform_tolerance: 2
 
 obstacle_layer:
+  # The default maximum distance from the robot at which an obstacle will be inserted into the cost map in meters. This can be over-ridden on a per-sensor basis.
   obstacle_range: 5
+  # The default range in meters at which to raytrace out obstacles from the map using sensor data. This can be over-ridden on a per-sensor basis.
   raytrace_range: 3
   max_obstacle_height: 5
   track_unknown_space: true
+  clearing: true
 
   observation_sources: point_cloud_sensorA point_cloud_sensorB
 
