--- a/src/arti_navigation/config/planner.yaml
+++ b/src/arti_navigation/config/planner.yaml
@@ -1,5 +1,7 @@
+recovery_behaviour_enabled: true
+recovery_behaviors: [{name: conservative_reset, type: clear_costmap_recovery/ClearCostmapRecovery}, {name: aggressive_reset, type: clear_costmap_recovery/ClearCostmapRecovery}] 
+planner_frequency: 0
 controller_frequency: 10.0
-recovery_behaviour_enabled: false
 
 NavfnROS:
   allow_unknown: true # Specifies whether or not to allow navfn to create plans that traverse unknown space.
@@ -8,7 +10,7 @@ NavfnROS:
 TrajectoryPlannerROS:
   # Robot Configuration Parameters
   acc_lim_x: 10.0
-  acc_lim_theta:  2.0
+  acc_lim_theta:  1.5
 
   max_vel_x: 1.0
   min_vel_x: 0.5
@@ -22,8 +24,8 @@ TrajectoryPlannerROS:
 
   # Goal Tolerance Parameters
   yaw_goal_tolerance: 0.3
-  xy_goal_tolerance: 0.2
-  latch_xy_goal_tolerance: false
+  xy_goal_tolerance: 0.3
+  latch_xy_goal_tolerance: true
 
   # Forward Simulation Parameters
   sim_time: 2.0
@@ -47,7 +49,7 @@ TrajectoryPlannerROS:
   publish_cost_grid_pc: true  
 
   # Oscillation Prevention Parameters
-  oscillation_reset_dist: 0.25 #How far the robot must travel in meters before oscillation flags are reset (double, default: 0.05)
+  oscillation_reset_dist: 0.5 #How far the robot must travel in meters before oscillation flags are reset (double, default: 0.05)
   escape_reset_dist: 0.1
   escape_reset_theta: 0.1
 
@@ -115,13 +117,13 @@ TebLocalPlannerROS:
   min_turning_radius: 0.0
   footprint_model: # types: "point", "circular", "two_circles", "line", "polygon"
     type: "polygon"
-    radius: 0.2 # for type "circular"
-    line_start: [-0.3, 0.0] # for type "line"
-    line_end: [0.3, 0.0] # for type "line"
-    front_offset: 0.2 # for type "two_circles"
-    front_radius: 0.2 # for type "two_circles"
-    rear_offset: 0.2 # for type "two_circles"
-    rear_radius: 0.2 # for type "two_circles"
+    # radius: 0.2 # for type "circular"
+    # line_start: [-0.3, 0.0] # for type "line"
+    # line_end: [0.3, 0.0] # for type "line"
+    # front_offset: 0.2 # for type "two_circles"
+    # front_radius: 0.2 # for type "two_circles"
+    # rear_offset: 0.2 # for type "two_circles"
+    # rear_radius: 0.2 # for type "two_circles"
     vertices: [[ 0.042,  0.025], [-0.042,  0.025], [-0.042, -0.025], [ 0.042, -0.025]] # for type "polygon"
 
   # GoalTolerance
