--- a/src/arti_navigation/config/costmap_common_params.yaml
+++ b/src/arti_navigation/config/costmap_common_params.yaml
@@ -1,7 +1,7 @@
 footprint: [[ 0.42,  0.25], [-0.42,  0.25], [-0.42, -0.25], [ 0.42, -0.25]]
-footprint_padding: 0.05
+footprint_padding: 0.03 # 0.05
 inflation_layer:
-  inflation_radius: 0.4 # 2xfootprint, it helps to keep the global planned path farther from obstacles
+  inflation_radius: 2.0 # 2xfootprint, it helps to keep the global planned path farther from obstacles
 transform_tolerance: 2
 
 obstacle_layer:
@@ -30,7 +30,7 @@ obstacle_layer:
     expected_update_rate: 0.5,
     marking: true,
     clearing: true,
-    min_obstacle_height: 0.1
+    min_obstacle_height: 0.05
   }
 
   point_cloud_sensorB: {
