--- a/src/arti_navigation/config/planner.yaml
+++ b/src/arti_navigation/config/planner.yaml
@@ -20,11 +20,11 @@ TrajectoryPlannerROS:
   min_in_place_rotational_vel: 3.0
 
   holonomic_robot: false
-  escape_vel: -0.4
+  escape_vel: -0.5
 
   # Goal Tolerance Parameters
   yaw_goal_tolerance: 0.3
-  xy_goal_tolerance: 0.3
+  xy_goal_tolerance: 0.5
   latch_xy_goal_tolerance: true
 
   # Forward Simulation Parameters
@@ -37,8 +37,8 @@ TrajectoryPlannerROS:
 
   # Trajectory scoring parameters
   meter_scoring: false # Whether the gdist_scale and pdist_scale parameters should assume that goal_distance and path_distance are expressed in units of meters or cells. Cells are assumed by default (false).
-  occdist_scale:  0.1 #The weighting for how much the controller should attempt to avoid obstacles. default 0.01
-  pdist_scale: 0.75  #     The weighting for how much the controller should stay close to the path it was given . default 0.6
+  occdist_scale:  2 #0.1 #The weighting for how much the controller should attempt to avoid obstacles. default 0.01
+  pdist_scale: 0.4  #     The weighting for how much the controller should stay close to the path it was given . default 0.6
   gdist_scale: 1.0 #     The weighting for how much the controller should attempt to reach its local goal, also controls speed  default 0.8
 
   heading_lookahead: 0.2  #How far to look ahead in meters when scoring different in-place-rotation trajectories
