--- a/src/arti_navigation/config/planner.yaml
+++ b/src/arti_navigation/config/planner.yaml
@@ -1,7 +1,8 @@
 recovery_behaviour_enabled: true
-recovery_behaviors: [{name: conservative_reset, type: clear_costmap_recovery/ClearCostmapRecovery}, {name: aggressive_reset, type: clear_costmap_recovery/ClearCostmapRecovery}] 
-planner_frequency: 10
-controller_frequency: 20.0
+# recovery_behaviors: [{name: conservative_reset, type: clear_costmap_recovery/ClearCostmapRecovery}, {name: aggressive_reset, type: clear_costmap_recovery/ClearCostmapRecovery}] 
+recovery_behaviors: [{name: conservative_reset, type: clear_costmap_recovery/ClearCostmapRecovery}] 
+planner_frequency: 0
+controller_frequency: 10.0
 
 NavfnROS:
   allow_unknown: true # Specifies whether or not to allow navfn to create plans that traverse unknown space.
@@ -25,14 +26,14 @@ TrajectoryPlannerROS:
   # Goal Tolerance Parameters
   yaw_goal_tolerance: 0.3
   xy_goal_tolerance: 0.5
-  latch_xy_goal_tolerance: true
+  latch_xy_goal_tolerance: false
 
   # Forward Simulation Parameters
-  sim_time: 2.0
+  sim_time: 1.0
   sim_granularity: 0.02
   angular_sim_granularity: 0.02
   vx_samples: 6
-  vtheta_samples: 25
+  vtheta_samples: 20
   controller_frequency: 20.0
 
   # Trajectory scoring parameters
@@ -41,7 +42,7 @@ TrajectoryPlannerROS:
   pdist_scale: 0.4  #     The weighting for how much the controller should stay close to the path it was given . default 0.6
   gdist_scale: 1.0 #     The weighting for how much the controller should attempt to reach its local goal, also controls speed  default 0.8
 
-  heading_lookahead: 0.2  #How far to look ahead in meters when scoring different in-place-rotation trajectories
+  heading_lookahead: 0.3  #How far to look ahead in meters when scoring different in-place-rotation trajectories
   heading_scoring: false  #Whether to score based on the robot's heading to the path or its distance from the path. default false
   heading_scoring_timestep: 0.8   #How far to look ahead in time in seconds along the simulated trajectory when using heading scoring (double, default: 0.8)
   dwa: false #Whether to use the Dynamic Window Approach (DWA)_ or whether to use Trajectory Rollout
