added the costmap_cleaner function, need to test if it works

--- a/src/arti_navigation/CMakeLists.txt
+++ b/src/arti_navigation/CMakeLists.txt
@@ -7,6 +7,7 @@ find_package(catkin REQUIRED
             roscpp
             arti_msgs
             geometry_msgs
+            std_srvs
         )
 
 # find_package(Eigen REQUIRED)
@@ -27,20 +28,24 @@ include_directories(
 add_definitions(${EIGEN_DEFINITIONS})
 link_directories(${catkin_LIBRARY_DIRS})
 
-add_library(arti_goal_publisher src/arti_goal_publisher.cpp)
-target_link_libraries(arti_goal_publisher ${libserial_LIBRARIES} ${catkin_LIBRARIES} ${Boost_LIBRARIES})
-add_dependencies(arti_goal_publisher arti_msgs_gencpp geometry_msgs_gencpp)
+add_library(multi_goal_publisher src/multi_goal_publisher.cpp)
+target_link_libraries(multi_goal_publisher ${libserial_LIBRARIES} ${catkin_LIBRARIES} ${Boost_LIBRARIES})
+add_dependencies(multi_goal_publisher arti_msgs_gencpp geometry_msgs_gencpp)
 
-add_executable(arti_goal_publisher_node src/arti_goal_publisher.cpp)
-target_link_libraries(arti_goal_publisher_node arti_goal_publisher ${catkin_LIBRARIES} ${Boost_LIBRARIES})
+add_executable(multi_goal_publisher_node src/multi_goal_publisher.cpp)
+target_link_libraries(multi_goal_publisher_node multi_goal_publisher ${catkin_LIBRARIES} ${Boost_LIBRARIES})
+
+add_executable(costmap_cleanner src/costmap_cleanner.cpp)
+target_link_libraries(costmap_cleanner ${catkin_LIBRARIES} ${Boost_LIBRARIES})
 
 
 install(TARGETS
-    arti_goal_publisher_node
-       ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-       LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-       RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-       )
+        multi_goal_publisher_node
+        costmap_cleanner
+        ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+        LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+        RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+        )
 
 # ## Mark cpp header files for installation
 # install(DIRECTORY include/${PROJECT_NAME}/
