--- a/src/arti_navigation/config/global_costmap_params.yaml
+++ b/src/arti_navigation/config/global_costmap_params.yaml
@@ -3,6 +3,7 @@ global_frame: map
 robot_base_frame: base_link
 update_frequency: 1
 publish_frequency: 1
+rolling_window: false
 always_send_full_costmap: false
 resolution: 0.025
 plugins:
