--- a/src/arti_navigation/package.xml
+++ b/src/arti_navigation/package.xml
@@ -17,12 +17,14 @@
     <build_depend>arti_msgs</build_depend>
     <build_depend>geometry_msgs</build_depend>
     <build_depend>std_srvs</build_depend>
+    <build_depend>tf</build_depend>
 
     <run_depend>cmake_modules</run_depend>
     <run_depend>roscpp</run_depend>
     <run_depend>arti_msgs</run_depend>
     <run_depend>geometry_msgs</run_depend>
     <run_depend>std_srvs</run_depend>
+    <run_depend>tf</run_depend>
     <!-- <run_depend>eigen</run_depend> -->
 
     <export>
