--- a/src/arti_navigation/config/costmap_common_params.yaml
+++ b/src/arti_navigation/config/costmap_common_params.yaml
@@ -32,6 +32,7 @@ obstacle_layer:
     clearing: true,
     min_obstacle_height: 0.2,
     max_obstacle_height: 2,
+    inf_is_valid: true
   }
 
   point_cloud_sensorB: {
