--- a/src/arti_navigation/config/planner.yaml
+++ b/src/arti_navigation/config/planner.yaml
@@ -18,14 +18,14 @@ TrajectoryPlannerROS:
 
   max_vel_theta: 5.0
   # min_vel_theta: -5.0
-  min_in_place_rotational_vel: 3.0
+  min_in_place_rotational_vel: 2.5
 
   holonomic_robot: false
   escape_vel: -0.5
 
   # Goal Tolerance Parameters
   yaw_goal_tolerance: 0.1
-  xy_goal_tolerance: 0.1
+  xy_goal_tolerance: 0.15
   latch_xy_goal_tolerance: false
 
   # Forward Simulation Parameters
@@ -43,7 +43,7 @@ TrajectoryPlannerROS:
   gdist_scale: 1.0 #     The weighting for how much the controller should attempt to reach its local goal, also controls speed  default 0.8
 
   heading_lookahead: 0.3  #How far to look ahead in meters when scoring different in-place-rotation trajectories
-  heading_scoring: false  #Whether to score based on the robot's heading to the path or its distance from the path. default false
+  heading_scoring: true  #Whether to score based on the robot's heading to the path or its distance from the path. default false
   heading_scoring_timestep: 0.8   #How far to look ahead in time in seconds along the simulated trajectory when using heading scoring (double, default: 0.8)
   dwa: false #Whether to use the Dynamic Window Approach (DWA)_ or whether to use Trajectory Rollout
   simple_attractor: false
