--- a/src/arti_navigation/package.xml
+++ b/src/arti_navigation/package.xml
@@ -18,6 +18,7 @@
     <build_depend>geometry_msgs</build_depend>
     <build_depend>std_srvs</build_depend>
     <build_depend>tf</build_depend>
+    <!-- <build_depend>rtabmap_ros</build_depend> -->
 
     <run_depend>cmake_modules</run_depend>
     <run_depend>roscpp</run_depend>
@@ -25,6 +26,7 @@
     <run_depend>geometry_msgs</run_depend>
     <run_depend>std_srvs</run_depend>
     <run_depend>tf</run_depend>
+    <!-- <run_depend>rtabmap_ros</run_depend> -->
     <!-- <run_depend>eigen</run_depend> -->
 
     <export>
