--- a/src/zed_cpu_ros/package.xml
+++ b/src/zed_cpu_ros/package.xml
@@ -2,7 +2,7 @@
     <name>zed_cpu_ros</name>
     <version>0.0.1</version>
     <description>
-      TODO
+      A simple zed camera driver which only use CPU and only publish left and right raw images.
     </description>
     <author>Di Zeng</author>
     <author>di.zeng@transcendrobotics.com</author>
@@ -17,17 +17,11 @@
     <build_depend>tf</build_depend>
     <build_depend>cv_bridge</build_depend>
     <build_depend>image_transport</build_depend>
-    <build_depend>realtime_tools</build_depend>
-    <build_depend>message_generation</build_depend>
 
     <run_depend>cmake_modules</run_depend>
     <run_depend>roscpp</run_depend>
     <run_depend>tf</run_depend>
     <run_depend>cv_bridge</run_depend>
-    <run_depend>realtime_tools</run_depend>
-    <run_depend>image_transport</run_depend>
-    <run_depend>message_generation</run_depend>
-    
 
     <export>
     </export>
