--- a/src/zed_cpu_ros/CMakeLists.txt
+++ b/src/zed_cpu_ros/CMakeLists.txt
@@ -13,7 +13,7 @@ find_package(catkin REQUIRED
 
 # find_package(Eigen3 REQUIRED)
 find_package(Boost REQUIRED)
-find_package(OpenCV 3.0.0 REQUIRED)
+find_package(OpenCV REQUIRED)
 
 include_directories(
     include
