changed some parameters

--- a/src/arti_vision/config/rgbd_gui.ini
+++ b/src/arti_vision/config/rgbd_gui.ini
@@ -38,7 +38,7 @@ General\gridMapOccupancyFrom3DCloud=false
 General\gridMapOpacity=0.75
 General\posteriorGraphView=true
 General\showGraphs=true
-General\octomap=false
+General\octomap=true
 General\octomap_depth=16
 General\octomap_ground_is_obstacle=true
 
